# starlog-mcp

./: .gitignore  ACTUAL_IMPLEMENTATION_STATUS.md  CARTON_INTEGRATION.md  COMPLETE_WORKFLOW_INTEGRATION.md  FINAL_MODEL_DESIGN.md  HEAVEN_REGISTRY_PATTERN.md  IMPLEMENTATION_SPEC.md  README.md  RULES_SYSTEM_DESIGN.md  STARLOG_FLIGHT_CONFIG_SPECIFICATION.md  STARLOG_SPECIFICATION.md  pyproject.toml  setup.py  test_rules_brain.py  test_starlog_direct_tool_call.py
.github/workflows/: publish-to-pypi.yml
starlog_mcp/: __init__.py  debug_diary.py  hpi_system.py  models.py  models_old.py  models_v2.py  rules.py  rules_brain_integration.py  starlog.py  starlog_mcp.py  starlog_sessions.py
test_project/: starlog.hpi
